a lot of changes and improvements; managing shedule accordinly to changes in models still a lot to fix
Signed-off-by: alex.lep <alex.lep.sp@gmail.com>

--- a/templates/status_list.html
+++ b/templates/status_list.html
@@ -112,6 +112,7 @@
                         {% set status = 'internalerror' %}
                     {% endif %}
                     <td class='{{ status }} col-xs-2'>{{ plug.plugin }}</td>
+                    <td class='{{ status }} col-xs-1'>{{ plug.scheduled_check_time.strftime('%H:%M:%S') }}</td>
                     <td class='{{ status }} col-xs-1'>{{ plug.last_check_run.strftime('%H:%M:%S') }}</td>
                     <td class='{{ status }}'>{{ plug.last_status }}</td>
                   </tr>
