--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,144 +7,198 @@
 {% block head %}
     {{ super() }}
     {{ lib.form_css() }}
-    <style media="screen" type="text/css">
-    .panel-body .btn:not(.btn-block) { width:120px;margin-bottom:10px; }
-    .panel-refresh {
-     height:250px;
-     position:relative;
-    }
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/chartist.min.css', _external=True) }}" ></link>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/chartist-plugin-tooltip.css', _external=True) }}" ></link>
+       <style media="screen" type="text/css">
+       .panel-body .btn:not(.btn-block) { width:120px;margin-bottom:10px; }
+       .panel-refresh {
+         height:250px;
+         position:relative;
+       }
 
-    .refresh-container {
-     position:absolute;
-     top:0;
-     right:0;
-     background:rgba(200,200,200,0.25);
-     width:100%;
-     height:100%;
-     display: none;
-     text-align:center;
-     z-index:4;
-    }
-    .refresh-spinner {
-     padding: 30px;
-     opacity: 0.8;
-    }
-    .row {
-      margin: 0;
-    }
-    .bg-error {
-      background-color: #E44424;
-      height: 100%;
-    }
-    .bg-warn {
-      background-color: #FFE658;
-      height: 100%;
-    }
-    .bg-ok {
-      background-color: #118C4E;
-      height: 100%;
-    }
-    .bg-info {
-      background-color: #23b7e5;
-      height: 100%;
-    }
-    .bg-panel {
-      background-color: #e4eaec;
-      border: 1px solid #e4eaec;
-    }
-</style>
-
+       .refresh-container {
+         position:absolute;
+         top:0;
+         right:0;
+         background:rgba(200,200,200,0.25);
+         width:100%;
+         height:100%;
+         display: none;
+         text-align:center;
+         z-index:4;
+       }
+       .refresh-spinner {
+         padding: 30px;
+         opacity: 0.8;
+       }
+       .small-block {
+         min-height: 80px !important;
+       }
+       .tile-panel {
+         margin-top: 5px;
+         margin-bottom: 5px;
+         border-radius: 0px;
+       }
+       .bg-error {
+         background-color: #e91e63 !important;
+         height: 100%;
+       }
+       .bg-warn {
+         background-color: #ff9800 !important;
+         height: 100%;
+       }
+       .bg-ok {
+         background-color: #8bc34a !important;
+         height: 100%;
+       }
+       .bg-info {
+         background-color: #00bcd4 !important;
+         height: 100%;
+       }
+       .bg-panel {
+         background-color: #edecec;
+         border: 0;
+       }
+       .bg-panel-body {
+         padding: 0 15px;
+       }
+       .bg-graph {
+         background-color: #009688 !important;
+         height: 100%;
+       }
+       .bg-graph-body {
+         height: 290px;
+       }
+       .bg-panel .count {
+         color: #eee;
+         font-size: 26px;
+         margin: auto;
+       }
+       .bg-panel .type {
+         color: #eee;
+         font-size: 16px;
+         margin: auto;
+       }
+       .no-side-padding {
+         padding-left: 0px;
+         padding-right: 0px;
+       }
+       .small-side-padding {
+         padding-left: 5px;
+         padding-right: 5px;
+       }
+       .ct-label {
+         font-size: 1.2rem;
+       }
+       .ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point, .ct-series-a .ct-slice-donut {
+         stroke: #00bcd4;
+       }
+       .ct-series-b .ct-bar, .ct-series-b .ct-line, .ct-series-b .ct-point, .ct-series-b .ct-slice-donut {
+         stroke: #8bc34a;
+       }
+       .ct-series-c .ct-bar, .ct-series-c .ct-line, .ct-series-c .ct-point, .ct-series-c .ct-slice-donut {
+         stroke: #ff9800;
+       }
+       .ct-series-d .ct-bar, .ct-series-d .ct-line, .ct-series-d .ct-point, .ct-series-d .ct-slice-donut {
+         stroke: #e91e63;
+       }
+   </style>
 {% endblock %}
 <!-- div class="col-md-6"-->
 
 {% block body %}
-  <div class="row">
-    <div class="col-md-4 bg-panel col-height">
-      <div class="row bg-panel">
-          <div class="panel-heading"><a id="refresh2" class="pull-right" href="#"><span class="glyphicon glyphicon-refresh"></span></a>Checks status</div>
-          <div class="col-xs-5">
-            <div class="panel panel-default">
-              <div class="panel-body bg-info text-center">
-                {{status.checks_active}}<br/>Checks
-                <!-- a href="#" class="btn btn-info btn-lg" role="button"><span class="glyphicon glyphicon-info-sign"></span> <br/>{{status.checks_active}} Checks </a-->
+    <div class="col-md-12 bottom_margin">
+      <div class="panel bg-panel">
+        <div class="panel-heading"><a id="refresh1" class="pull-right" href="#"><span class="glyphicon glyphicon-refresh"></span></a>Checks status</div>
+        <div class="panel-body bg-panel-body">
+        <div class="refresh-container"></div>
+          <div class="col-md-3 no-side-padding">
+            <div class="col-xs-6 small-side-padding">
+              <div class="panel tile-panel bg-info small-block text-center">
+                <div class="panel-body">
+                  <span id="checks_active" class="count">---</span><br />
+                  <span class="type">Checks</span>
+                  <!-- a href="#" class="btn btn-info btn-lg" role="button"><span class="glyphicon glyphicon-info-sign"></span> <br/>{{status.checks_active}} Checks </a-->
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 small-side-padding">
+              <div class="panel tile-panel bg-ok small-block text-center">
+                <div class="panel-body">
+                  <span id="checks_ok" class="count">----</span><br />
+                  <span class="type">OK</span>
+                  <!-- a href="#" class="btn btn-success btn-lg" role="button"><span class="glyphicon glyphicon-ok-sign"></span> <br/>{{status.checks_ok_count}} OK</a-->
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 small-side-padding">
+              <div class="panel tile-panel bg-warn small-block text-center">
+                <div class="panel-body">
+                  <span id="checks_warn" class="count">---</span><br />
+                  <span class="type">Warnings</span>
+                  <!-- a href="#" class="btn btn-warning btn-lg" role="button"><span class="glyphicon glyphicon-question-sign"></span> <br/>{{status.checks_warn_count}} Warnings</a-->
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 small-side-padding">
+              <div class="panel tile-panel bg-error small-block text-center">
+                <div class="panel-body">
+                    <span id="checks_error" class="count">---</span><br />
+                    <span class="type">Errors</span>
+                  <!-- a href="#" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span> <br/>{{status.checks_err_count}} Errors </a -->
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 small-side-padding">
+              <div class="panel tile-panel bg-error small-block text-center">
+                <div class="panel-body">
+                    <span class="count">---</span><br />
+                    <span class="type">Errors</span>
+                  <!-- a href="#" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span> <br/>{{status.checks_err_count}} Errors </a -->
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-6 small-side-padding">
+              <div class="panel tile-panel bg-error small-block text-center">
+                <div class="panel-body">
+                    <span class="count">---</span><br />
+                    <span class="type">Errors</span>
+                  <!-- a href="#" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span> <br/>{{status.checks_err_count}} Errors </a -->
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-xs-5">
-            <div class="panel panel-default">
-              <div class="panel-body bg-ok text-center">
-                {{status.checks_ok_count}}<br/>OK
-                <!-- a href="#" class="btn btn-success btn-lg" role="button"><span class="glyphicon glyphicon-ok-sign"></span> <br/>{{status.checks_ok_count}} OK</a-->
-              </div>
+    <div class="col-md-9 no-side-padding">
+        <div class="col-xs-12 small-side-padding">
+          <div class="panel tile-panel bg-graph">
+            <div class="panel-body no-side-padding bg-graph-body">
+              <div class="ct-chart">
+                      </div>
+              <!-- a href="#" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span> <br/>{{status.checks_err_count}} Errors </a -->
             </div>
           </div>
-          <div class="col-xs-5">
-            <div class="panel panel-default">
-              <div class="panel-body bg-warn text-center">
-                {{status.checks_warn_count}}<br/>Warnings
-                <!-- a href="#" class="btn btn-warning btn-lg" role="button"><span class="glyphicon glyphicon-question-sign"></span> <br/>{{status.checks_warn_count}} Warnings</a-->
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-5">
-            <div class="panel panel-default">
-              <div class="panel-body bg-error text-center">
-                {{status.checks_err_count}}<br/>Errors
-                <!-- a href="#" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span> <br/>{{status.checks_err_count}} Errors </a -->
-              </div>
-            </div>
-          </div>
-          <div class="panel-heading">Overall Health Status</div>
-          <div class="col-xs-5">
-            <div class="panel panel-default">
-              <div class="panel-body bg-error text-center">
-                {{status.checks_err_count}}<br/>Errors
-                <!-- a href="#" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span> <br/>{{status.checks_err_count}} Errors </a -->
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-5">
-            <div class="panel panel-default">
-              <div class="panel-body bg-error text-center">
-                {{status.checks_err_count}}<br/>Errors
-                <!-- a href="#" class="btn btn-danger btn-lg" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span> <br/>{{status.checks_err_count}} Errors </a -->
-              </div>
-            </div>
-          </div>
+        </div>
       </div>
-    </div>
-    <div class="col-md-5">
-      <div class="row bg-panel">
-        <div class="panel bg-panel">
-          <div class="panel-heading bg-panel"><a id="refresh3" class="pull-right" href="#"><span class="glyphicon glyphicon-refresh"></span></a>Checks chart</div>
-          <img src='https://images.duckduckgo.com/iu/?u=http%3A%2F%2Fmaxcdn.webappers.com%2Fimg%2F2012%2F02%2Fjavascript-chart.png&f=1' />
+  </div>
+  </div>
+</div>
+  </div>
+  <div class="row bottom-margin">
+    <div class="col-md-12">
+      <div class="panel bg-panel">
+        <div class="panel-heading"><a id="refresh2" class="pull-right" href="#"><span class="glyphicon glyphicon-refresh"></span></a>Violet Instances connected</div>
+        <div class="panel-body panel-refresh">
+
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="panel panel-default">
-      <div class="panel-heading"><a id="refresh1" class="pull-right" href="#"><span class="glyphicon glyphicon-refresh"></span></a>Violet Instances connected</div>
-      <div class="panel-body panel-refresh">
-     	<div class="refresh-container"></div>
-        <div class="refresh-data">
-        	This is the original data that will update upon refresh..
-        </div>
-      </div>
-    </div>
-  </div>
-
-{% if violetstats %}
-  {% for key in violetstats.keys() %}
-    {{ violetstats[key] }}
-  {% endfor %}
-{% endif %}
-
-
 {% endblock %}
 
 {% block tail_js %}
 <script src="{{ admin_static.url(filename='vendor/jquery.min.js', v='2.1.4') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/chartist.min.js', _external=True) }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='js/chartist-plugin-tooltip.min.js', _external=True) }}" type="text/javascript"></script>
+
 {% endblock %}
 
 {% block tail %}
@@ -154,59 +208,106 @@ $.fn.refreshMe = function(opts){
 
       var $this = this,
           defaults = {
-            ms:1000,
+            ms:300,
             parentSelector:'.panel',
-            started:function(){},
-            completed:function(){}
+            function1:function(){},
+            function2:function(){}
           },
           settings = $.extend(defaults, opts);
 
       var par = this.parents(settings.parentSelector);
       var panelToRefresh = par.find('.refresh-container');
-      var dataToRefresh = par.find('.refresh-data');
 
       var ms = settings.ms;
-      var started = settings.started;		//function before timeout
-      var completed = settings.completed;	//function after timeout
+      var f1 = settings.function1;		//function before timeout
+      var f2 = settings.function2;	//function after timeout
 
       $this.click(function(){
         panelToRefresh.show();
-        if (dataToRefresh) {
-          started(dataToRefresh);
-        }
         setTimeout(function(){
-          if (dataToRefresh) {
-              completed(dataToRefresh);
-          }
-          panelToRefresh.fadeOut(500);
+          f1(par);
+          f2();
+          panelToRefresh.fadeOut(300);
         },ms);
         return false;
-      })//click
+      });//click
+    };
 
-
-$.fn.customRequest = function (ele) {
+$.fn.customStatsAll = function () {
          $.ajax({
            type: "GET",
-           url: 'http://localhost:5000/ajaxcallvioletheartbeats/',
+           url: '{{ url_for('blueapi_blueprint.getCustomStats', _external = True, period = "all") }}',
+           dataType: 'json',
            success: function(data) {
-              ele.html(JSON.stringify(data));
+             var data_ = {
+               labels: data.meta.labels,
+               series: [
+                 data.ds.checks_active,
+                 data.ds.checks_ok,
+                 data.ds.checks_warn,
+                 data.ds.checks_error
+               ]
+             };
+             var options = {
+               showPoint: true,
+               lineSmooth: true,
+               height: 260,
+               seriesBarDistance: 10,
+               plugins: [
+                 Chartist.plugins.tooltip()
+               ],
+               axisX: {
+                 showGrid: true,
+                 showLabel: true
+               },
+               axisY: {
+                 offset: 40,
+                 labelInterpolationFnc: function(value) {
+                   return value;
+                 }
+               }
+             };
+             new Chartist.Line('.ct-chart', data_, options);
            },
            error: function(e)
            {
               alert(e.message);
            }
         });
-      }
+      };
 
-}/* end function refreshMe */
-
+$.fn.customStatsLast = function (par) {
+                 $.ajax({
+                   type: "GET",
+                   url: '{{ url_for('blueapi_blueprint.getCustomStats', _external = True, period = "last") }}',
+                   dataType: 'json',
+                   success: function(data) {
+                      //alert(data);
+                      $('#checks_active').text(data.ds.checks_active);
+                      $('#checks_ok').text(data.ds.checks_ok);
+                      $('#checks_warn').text(data.ds.checks_warn);
+                      $('#checks_error').text(data.ds.checks_error);
+                   },
+                   error: function(e)
+                   {
+                      alert(e.message);
+                   }
+                });
+              };
 
 $(document).ready(function(){
 
   $('#refresh1').refreshMe({
-    started:function(ele){ele.html("Refreshing Violet statistics...")},
-  	completed:function(ele){$.fn.customRequest(ele)}
+    function1:function(par){$.fn.customStatsLast(par)},
+  	function2:function(){$.fn.customStatsAll()}
   });
+
+  $('#refresh1').click();
+
+/*************************************************************************************/
+
+/*************************************************************************************/
+
 
 });
 </script>
